Fix aside visibility on desk

--- a/source/stylesheets/blocks/_work.sass
+++ b/source/stylesheets/blocks/_work.sass
@@ -13,10 +13,8 @@
 
   +at-breakpoint(tab)
     max-width: 48%
-    margin-right: 0
   +at-breakpoint(lap)
-    max-width: 33%
-    margin-right: 0
+    max-width: 32.2%
 
 .work__image
   line-height: 0
